# learning-rust

./: Cargo.toml  redme.md  rustfmt.toml
note/: cool.md  links-students.md  links.md  notes.md  notes.txt  ui_mermaid-gantt.md  ui_mermaid-graph.md  ui_plantuml.md  ui_tex.md
src/: main.rs
src/book/: mod.rs  topic09random.rs
src/book/ch02/: guess_app.rs
src/book/ch03/: arrays.rs  functions2.rs  mod.rs  placeholders.rs  tuples.rs  types.rs
src/book/ch04/: borrowing2.rs  mod.rs  ownership.rs  ownership2.rs  reference_borrowing.rs
src/book/ch05/: structs.rs  structs2.rs
src/book/ch06/: options.rs
src/book/ch08/: hashmaps.rs  mod.rs  vectors.rs
src/book/ch10/: generics_structs.rs  lifetimes.rs  mod.rs  traits2.rs
src/book/ch11/: _testing.md  basics_assertions.rs  basics_structure.rs  example_greeting.rs  example_rectangle.rs  mod.rs  option_with_output.rs
src/book/ch12/: parameters.rs
src/book/ch13/: closures.rs  it3_flatmap.rs  mod.rs  (+4 more)
src/topics/: mod.rs  regex.rs  topic01primitives.rs  topic02arrays.rs  topic02tuples.rs  topic03struct.rs  topic04functions.rs  topic05strings.rs  topic06ownership.rs  topic07loops.rs  topic08stdin.rs  topic09random.rs  topic10enum.rs  topic11option.rs  topic12collections.rs  topic13hashmap.rs  topic14.rs  topic14result.rs  topic15gen.rs  topic16lifetimes.rs  topic17.rs  topic17testing.rs  topic18closures.rs  topic19iter.rs  topic20.rs
src/usecases/: a2literals.rs  a4overflow.rs  a5binary_basics.rs  a6floats.rs  boolean1.rs  brackets.rs  math1.rs  mod.rs  ownership.rs  pack_unpack.rs  ranges1.rs  sandbox1.rs  unfold.rs
(+108 files in other folders)
