[package]
name = "learing-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "^0.8.5" # 0.8.5+, <0.9.0
ferris-says = "0.3.1"
time = "0.3.36"
regex = "1.10.6"
lazy_static = "1.5.0"
syn = "2.0.77"

[profile.release]
panic = 'abort' # don't worry about memory and stacktrace
